<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/loginback"
    android:clickable="true"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.isoftstone.finance.cwgsapp.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="280.0dip"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30.0dip"
        android:layout_marginRight="30.0dip"
        android:background="@drawable/shape_stroke"
        android:orientation="vertical"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="55.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tv_account"
                android:textColor="@color/wordcolorone"
                android:textSize="@dimen/tvsize_titlename" />

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginLeft="20.0dip"
                android:background="@color/white"
                android:digits="@string/login_dig_account"
                android:hint="@string/login_et_account"
                android:maxLines="10"
                android:textColor="@color/wordcolorone"
                android:textColorHint="@color/wordcolortwo"
                android:textSize="@dimen/textsize_item_texttitle" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="@color/spaceline" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="10.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tv_password"
                android:textColor="@color/wordcolorone"
                android:textSize="@dimen/tvsize_titlename" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="wrap_content"
                android:layout_height="45.0dip"
                android:layout_marginLeft="20.0dip"
                android:background="@color/white"
                android:digits="@string/login_dig_password"
                android:hint="@string/login_et_password"
                android:maxLength="12"
                android:inputType="textPassword"
                android:textColor="@color/wordcolorone"
                android:textColorHint="@color/wordcolortwo"
                android:textSize="@dimen/textsize_item_texttitle" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10.0dip"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/iv_deletepass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10.0dip"
                        android:src="@mipmap/deletepass"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/iv_password_eye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/showpass" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="@color/spaceline" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginBottom="10.0dip"
            android:layout_marginTop="30.0dip"
            android:background="@drawable/shape_login"
            android:gravity="center"
            android:text="@string/login_btn_login"
            android:textColor="@android:color/white"
            android:textSize="22.0dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/login_tv_forgetpassword"
            android:textColor="@color/wordcolorthree"
            android:textSize="@dimen/tvsize_state"
            android:visibility="gone" />
    </LinearLayout>

    <com.isoftstone.finance.cwgsapp.external.CircularImage
        android:id="@+id/login_headimage"
        android:layout_width="80.0dip"
        android:layout_height="80.0dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="-320.0dip" />
</LinearLayout>

